--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,5 @@
 html, body {
-	font-family: 'Tajawal', sans-serif;
+	font-family: 'Crimson Text', serif;
 	padding: 0;
 	margin: 0;
 	color: #313131;
@@ -15,18 +15,18 @@ img {
 
 h1 {
 	padding: 10px 0;
+	font-family: 'Bebas Neue', cursive;
 }
 
-/* Fonts */
-
-.tajawal {
-	font-family: 'Tajawal', sans-serif;
+h2 {
+	font-family: 'Bebas Neue', cursive;
 }
 
 /* Font sizes */
 
 p, li {
 	font-size: 1.5em;
+	font-family: 'Crimson Text', serif;
 }
 
 /* Colors */
